# Memory_Manager

./: CMakeLists.txt  Makefile  Makefileee  main  run_test.sh  test.sh  test1  test1.c
src/: faults_handle.c
src/include/: cust_allocation.h  faults_handle.h
temp_folder/: test1.c  test2.c
tests/: test.sh
tests/outs/: CMakeLists.txt  Makefile  README.md  test1  test2  test3
tests/outs/src/: cust_allocation.c  faults_handle.c
tests/outs/src/include/: extern_memery_manager.c
tests/src/: test1  test1.c  test2  test2.c  test3  test3.c
